@@ -12,7 +12,4 @@
     return any(card.rank() == rank and card.suit() == suit for card in self._deckCards)
 
 - Fix naming conventions
-- In Card class improve methods. Make some of them "private"
 - In Card class maybe rename id() method
-
-- Change how push works in SuitDeck. replace int(rank)
