@@ -1,3 +1,0 @@
-import os
-
-print(os.path.join("card_imgs", "2c.png"))
