@@ -1,0 +1,6 @@
+a = [[1 ,2, 3], [4, 5]]
+
+for row in range(2):
+    for col in range(3):
+        print(a[row][col], end=" ")
+    print("\n")
